--- a/src/components/Favorite/style.css
+++ b/src/components/Favorite/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
 }
 
 .main {
@@ -38,7 +38,7 @@ body {
   width: 2000px;
   position: absolute;
   right: 100px;
-  background-color:#F1F1F1;
+  background-color: #f1f1f1;
 }
 
 .content__change {
@@ -83,8 +83,8 @@ body {
   width: 210px;
   height: 50px;
   font-size: 20px;
-  color: #1390E5;
-  border: 1px solid #1390E5;
+  color: #1390e5;
+  border: 1px solid #1390e5;
   box-sizing: border-box;
   border-radius: 10px;
   background-color: white;
@@ -96,14 +96,12 @@ body {
   height: 50px;
   color: white;
   font-size: 20px;
-  background-color: #1390E5;
+  background-color: #1390e5;
   border: none;
   border-radius: 10px;
   margin: 5px;
 }
 
-
-
-h5{
+h5 {
   text-align: start;
 }
