--- a/src/Header/style.css
+++ b/src/Header/style.css
@@ -1,4 +1,3 @@
-
 .header {
   max-width: 1440px;
   padding-left: 20px;
@@ -29,8 +28,8 @@
 }
 
 .active {
-  color: #1390E5 !important;
-  border-bottom: 2px solid #1390E5;
+  color: #1390e5 !important;
+  border-bottom: 2px solid #1390e5;
 }
 
 .header__content li {
@@ -40,14 +39,14 @@
 .header__exit {
   display: block;
   margin-left: 60%;
-  color: #1390E5;
+  color: #1390e5;
 }
 
 .blue {
-  color: #1390E5;
+  color: #1390e5;
 }
 
-@media (max-width: 1070px){
+@media (max-width: 1070px) {
   .header__content {
     max-width: 800px;
   }
@@ -55,7 +54,3 @@
     margin-left: 45%;
   }
 }
-
-
-
-
