--- a/src/components/SignIn/style.css
+++ b/src/components/SignIn/style.css
@@ -5,15 +5,15 @@
 .login {
   position: relative;
   height: 720px;
-  background: #E5E5E5;
+  background: #e5e5e5;
 }
 
 .login__block {
   position: absolute;
   width: 510px;
   height: 520px;
-  left: calc(50% - 510px/2);
-  top: calc(50% - 520px/2);
+  left: calc(50% - 510px / 2);
+  top: calc(50% - 520px / 2);
   background: white;
   border-radius: 15px;
   text-align: center;
@@ -23,14 +23,13 @@
   margin-top: 32px;
 }
 
-
 .login__img {
   display: flex;
   justify-content: center;
   padding-top: 50px;
 }
 
-.login__form  h5{
+.login__form h5 {
   text-align: start;
   margin-left: 90px;
   margin-bottom: 0;
@@ -57,23 +56,23 @@
 }
 
 .login__password__control {
-	position: relative;
-	top: 6px;
-	right: 33px;
-	display: inline-block;
-	width: 25px;
-	height: 25px;
-	background: url(../../assets/view.svg) 0 0 no-repeat;
+  position: relative;
+  top: 6px;
+  right: 33px;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  background: url(../../assets/view.svg) 0 0 no-repeat;
   border: none;
   cursor: pointer;
 }
 .view {
-	background: url(../../assets/no-view.svg) 0 0 no-repeat;
+  background: url(../../assets/no-view.svg) 0 0 no-repeat;
 }
 
 .login__submit {
   border: none;
-  background: #1390E5;
+  background: #1390e5;
   border-radius: 10px;
   width: 175px;
   height: 50px;
@@ -86,4 +85,3 @@
   background: #29a3f5;
   box-shadow: 0px 2px 2px inset rgb(5, 64, 119);
 }
-
