--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -54,3 +54,13 @@
     margin-left: 45%;
   }
 }
+
+@media (max-width: 700px) {
+  .header__content {
+    max-width: 100px;
+    margin: 0 0 0 100px;
+  }
+  .header__exit {
+    margin-left: 45%;
+  }
+}
